<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light"><i>Light</i></string>
    <string name="medium">Medium</string>
    <string name="_10">10</string>
    <string name="ravenous"><b>Ravenous</b></string>
    <string name="total_pizzas">Total pizzas: %d</string>
    <string name="calculate">Calculate</string>

</resources>